# Jump

./: .gitignore  CMakeLists.txt  board.cpp  board.csv  board.h  board_32.csv  concurrency_concepts.cpp  main.cpp  result_32_to_2.txt  solver.h  start_solving.py  test.cpp
testData/: test_board.csv  test_board_equivalence_180.csv  test_board_equivalence_270.csv  test_board_equivalence_90.csv  test_board_equivalence_base.csv  test_board_equivalence_diagonal_1.csv  test_board_equivalence_diagonal_2.csv  test_board_equivalence_horizontal.csv  test_board_equivalence_vertical.csv  test_board_step_1_1.csv  test_board_step_1_2.csv  test_duplicate_detection.csv  test_duplicate_detection_result.csv
